--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
     <footer>
         <p>Made with ❤️ by <a href="https://github.com/joanneeldy">Joanne</a></p>
     </footer>
-    <script src="assets/proyek.js"></script>
+    <script src="assets/project.js"></script>
 </body>
 </html>
